[package]
name = "pgShield"
version = "0.1.0"
authors = ["Indrit Zeqiri <indrit.zeqiri@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
postgres = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
lib_engine = {path = "src/lib_engine"}
