[package]
name = "lib_engine"
version = "0.1.0"
authors = ["Indrit Zeqiri <indrit.zeqiri@gmail.com>"]
edition = "2021"
description = "Lib Engine is the main engine of pgshield to assemble all pieces in place"
repository = "https://github.com/ilstarno/pgShield"
license = "MIT"
keywords = ["engine", "engine", "postgresql", "connection", "pooling", "pgShield"]
categories = ["engine"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio-postgres = "0.7.2"
postgres = "0.19.0"
log = "0.4"
syslog = "6.0"


lib_cache = {path = "../lib_cache"}
lib_config = {path = "../lib_config"}
lib_logger = {path = "../lib_logger"}
lib_pool = {path = "../lib_pool"}
lib_query = {path = "../lib_query"}

[lib]
name = "lib_engine"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3