[package]
name = "lib_pgsqlcli"
version = "0.1.0"
authors = ["Indrit Zeqiri <indrit.zeqiri@gmail.com>"]
edition = "2021"
description = "Lib PostgreslClient is a pure native light rust client"
repository = "https://github.com/pgShield/pgShield"
license = "MIT"
keywords = ["client", "postgresql", "connection", "client", "pgShield"]
categories = ["engine"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
lib_logger = { path = "../lib_logger" }
log = "0.4"
byteorder = "1.5.0"
hex = "0.4.3"
md-5 = "0.10.6"

[lib]
name = "lib_pgsqlcli"
crate-type = ["dylib"]

[features]
default = ["std"]
std = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
