[package]
name = "lib_pgsqlcli"
version = "0.1.0"
authors = ["Indrit Zeqiri <indrit.zeqiri@gmail.com>"]
edition = "2021"
description = "Lib PostgreslClient is a pure native light rust client"
repository = "https://github.com/pgShield/pgShield"
license = "MIT"
keywords = ["client", "postgresql", "connection", "client", "pgShield"]
categories = ["engine"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
bytes = "1.0"
url = "2.2"
md-5 = "0.10"
hex = "0.4"
oauth2 = "4.1"
ldap3 = "0.10"


[lib]
name = "lib_pgsqlcli"
crate-type = ["dylib"]

[features]
default = ["std"]
std = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
