[package]
name = "lib_pool"
version = "0.1.0"
authors = ["Indrit Zeqiri <indrit.zeqiri@gmail.com>"]
edition = "2021"
description = "Lib Pool is the main pool framework of pgshield"
repository = "https://github.com/ilstarno/pgShield"
license = "MIT"
keywords = ["engine", "engine", "postgresql", "connection", "pooling", "pgShield"]
categories = ["engine"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio-postgres = "0.7.2"


[lib]
name = "lib_pool"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3