[package]
name = "lib_query"
version = "0.1.0"
authors = ["Indrit Zeqiri <indrit.zeqiri@gmail.com>"]
edition = "2021"
description = "Lib Query is the main query performance and parser for pgShield"
repository = "https://github.com/ilstarno/pgShield"
license = "MIT"
keywords = ["query", "engine", "postgresql", "connection", "pooling", "pgShield"]
categories = ["query"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
chrono = "0.4"
tokio-postgres = "0.7.10"
postgres = "0.19.0"
log = "0.4"



[lib]
name = "lib_query"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3